# mcp-deepl

./: .env.example  .gitignore  .mcpbignore  Dockerfile  Makefile  README.md  manifest.json  pyproject.toml  server.json
.github/workflows/: build-bundle.yml  ci.yaml
e2e/: conftest.py  test_e2e_docker.py  test_e2e_mcpb.py
src/mcp_deepl/: SKILL.md  __init__.py  api_client.py  api_models.py  server.py
tests/: __init__.py  test_api_client.py  test_server.py
tests-integration/: conftest.py  test_core_tools.py  test_skill_llm.py
