[project]
name = "mcp-deepl"
version = "0.2.0"
description = "DeepL MCP Server with comprehensive translation tools and type safety"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepl>=1.19.0",
    "fastmcp>=2.14.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_deepl"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long - handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "anthropic>=0.79.0",
    "mcp>=1.3.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpserver>=1.1.0",
    "requests>=2.32.0",
    "ruff>=0.13.1",
    "testcontainers>=4.0.0",
    "ty>=0.0.1a0",
]
